tests/compile_fail/default/union.rs
#[derive(derive_more::Default)]
union MyUnion {
    i: u32,
}

fn main() {}