tests/compile_fail/default/union.stderr
error: Clone cannot be derived for unions
 --> tests/compile_fail/default/union.rs:2:1
  |
2 | union MyUnion {
  | ^^^^^
